# Team204

./: .gitattributes  .gitignore  LICENSE  README.md
demo/: Readme.txt  mapMag.sh  master.sh  readme.md
demo/gui/: main.py
demo/mani_ctrl/: CMakeLists.txt  package.xml
demo/map_manager/: CMakeLists.txt  package.xml
demo/masterctrl/: CMakeLists.txt  package.xml
demo/move_test/: CMakeLists.txt  package.xml
demo/robot_exception/: CMakeLists.txt  package.xml
demo/robot_sim_demo/: CMakeLists.txt  README.md
demo/robot_sound/: CMakeLists.txt  package.xml
demo/rqt_mypkg/: package.xml
demo/vel_pkg/: CMakeLists.txt  Doxyfile  package.xml  topic.txt
demo/wpr_grab_control/: CMakeLists.txt  package.xml
demo/wpr_gui/: CMakeLists.txt  package.xml
demo/wpr_msgs/: CMakeLists.txt  (+2 more)
demo/wpr_navigation/: CMakeLists.txt  README.md  package.xml
demo/wpr_navigation/launch/: navigation_demo.launch  view_navigation.launch
demo/wpr_navigation/launch/include/: move_base.launch.xml
demo/wpr_navigation/param/: costmap_common_params.yaml
demo/wpr_navigation/rviz/: navigation.rviz
demo/wpr_navigation/src/: navigation.cpp
会议记录/: 不定期会议记录0402.docx  不定期会议记录0419.docx  不定期会议记录0422.md  不定期会议记录0506.md  不定期会议记录0520.md  不定期会议记录0527.md  不定期会议记录0603.md
类图/: FlowCharts.mdj  ROS.mdj
项目文档/: .~lock.SDD-软件设计说明.doc#  PDSR-项目总结报告.doc  SDD-软件设计说明.doc  SDP-软件开发计划.doc  SRS-需求规格说明书.docx  STD-软件测试说明.doc  Team204 需求规格说明书-V0.1.docx  Team204 需求规格说明书-V0.2.docx  Team204 需求规格说明书-V0.3.docx  ~$D-软件设计说明.doc  ~$P-软件开发计划.doc  ~$S-需求规格说明书.docx  ~WRL0001.tmp  导航规划测试文档.docx  总控模块状态转移表.xlsx
(+88 files in other folders)
